Use card layout on course archive page
This switches the course archive to use a layout similar to the front
page, and adapts the frontpage `card` component to include a "condensed"
version.

The courses are arranged by starting calendar year.

This leads to more consistency and resolves the small accessibility
issues found in the page.

The link to the archive also moves from hidden inside a sentence to
alongside the section header on the front page, and renames the
card-related classes to be a little more generic.

Fixes https://github.com/apluslms/a-plus/issues/626

--- a/course/templates/course/_course_cards.html
+++ b/course/templates/course/_course_cards.html
@@ -6,6 +6,7 @@
 	<div class="frontpage card">
 		<div class="card-clickable">
 			<a href="{{ instance_url }}">
+				{% if not condensed %}
 				<div class="course-image" aria-hidden="true">
 					{% if instance.image %}
 						<img class="card-img-top" src="{{ instance.image.url }}" alt="" />
@@ -15,6 +16,7 @@
 					</div>
 					{% endif %}
 				</div>
+				{% endif %}
 				<div class="card-body">
 					<h3 class="card-title" lang="{{ instance.language }}">
 						{{ instance.course.name|parse_localization }}<br />
@@ -24,7 +26,7 @@
 					</p>
 					<p class="card-text">
 						{{ instance.course.code }}
-						{% if not instance.visible_to_students %}
+						{% if not instance.visible_to_students and not condensed %}
    							<span class="label label-danger">{% trans "Hidden from students" %}</span>
 						{% endif %}
 						<br />
@@ -35,6 +37,7 @@
 				</div>
 			</a>
 		</div>
+		{% if not condensed %}
 		<div class="card-footer">
 			{% if instance.enrollment_audience == 1 or instance.enrollment_audience == 3 %}
 				<span class="label label-success">{{ internal_user_label|safe }}</span>
@@ -43,6 +46,7 @@
 				<span class="label label-info">{{ external_user_label|safe }}</span>
 			{% endif %}
 		</div>
+		{% endif %}
 	</div>
 {% endwith %}
 {% endfor %}
