--- a/exercise/templates/exercise/exercise.html
+++ b/exercise/templates/exercise/exercise.html
@@ -84,7 +84,7 @@
 <script src="{% static 'exercise/chapter.js' %}"></script>
 <script
     src="{% static 'exercise/language_link.js' %}"
-    data-set-lang="{% url 'set-user-language' %}"></script>
+    data-set-lang="{{ instance|url:'set-enrollment-language' }}"></script>
 <script>
 // Visualize loading in case of slow POST operations.
 /*$(function() {
