Change language based on url query parameter
Change language based on hl query parameter, for example ?hl=fi at the
end of the url shows the content in Finnish if the page is available in
that language. Otherwise, an error is raised.
* If the error is raised on other than course page, a 404 html page is
shown with a link to the material in default language.
* If the error is raised on course page, a 404 html page is shown with
a list of available languages and links for each.
* Language parameter stays in the url when navigating through page,
except when user changes language either on course page or on profile
page.

--- a/templates/404.html
+++ b/templates/404.html
@@ -16,12 +16,29 @@
                         <h1>404 Not found</h1>
                     </div>
                     {% include "_messages.html" %}
+                    {% if url_without_language %}
+                    <div class="alert alert-danger">
+                        {% trans "The page is not available in this language." %}
+                        <a href="{{ url_without_language }}">{% trans "Open the page in default language" %}</a>
+                    </div>
+                    {% elif languages %}
+                    <div class="alert alert-danger">
+                        {% blocktrans trimmed %}
+                        The course is not available in this language.
+                        You can view the course in these languages:
+                        {% endblocktrans %}
+                        {% for lang in languages %}
+                            <a href="{{ lang.url }}">{{ lang.name }}</a>
+                        {% endfor %}
+                    </div>
+                    {% else %}
                     <div class="alert alert-danger">
                         {% blocktrans %}
                         For an unknown reason you arrived somewhere that does not exist.
                         Please, try again.
                         {% endblocktrans %}
                     </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
