Replace default Bootstrap colours
This commit adds new SASS files which define colours. Those which are
"institution-specific" are separate from those with a semantic meaning.

These new colours are then used to override Bootstrap's default colours.

The colours were chosen as:

- Aalto-specific brand colours (currently only the blue is used,
  which is very close to Bootstrap brand primary anyway).
- Bootstrap defaults for `info` and `warning`, darkened until they have
  a contrast ratio >5.
- New colours for `success` and `danger`. They're still red and green,
  but were chosen because they worked well in the new buttons and match
  the WCAG-AAA contrast requirements.

Now that these are used in Bootstrap, all default button-related colour
contrast issues are resolved.

Fixes https://github.com/apluslms/a-plus/issues/568

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,11 +1,22 @@
-// Here we import the old file, but any new styles can be added directly to 
+// Here we import the old file, but any new styles can be added directly to
 // this file below
 
 @import 'helpers/choose_contrast_color';
 
 
-// First set some variables
-$brand-primary: #005EB8;
+// First import the custom colours
+@import 'colors/theme';
+// Set some Bootstrap variables
+$brand-primary: $aplus-brand-primary;
+$gray-base: $aplus-foreground;
+$body-bg: $aplus-background;
+
+// Next, import the functional colours
+@import 'colors/functional';
+$brand-success: $aplus-success;
+$brand-info: $aplus-info;
+$brand-warning: $aplus-warning;
+$brand-danger: $aplus-danger;
 
 @import 'vendor/bootstrap3';
 
