Add points indicator component
Creates a new component with the associated view. The component isn't
used anywhere yet.

The component displays an SVG icon alongside text to show progress on a
question, chapter or course. The icon is coloured using CSS, and the
data provided to the partial view are used to decide which icon/words to
show.

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,4 +1,4 @@
-// Here we import the old file, but any new styles can be added directly to 
+// Here we import the old file, but any new styles can be added directly to
 // this file below
 
 @import 'helpers/choose_contrast_color';
@@ -22,4 +22,5 @@ $brand-primary: #005EB8;
 /*!
  * A+ Styles
  */
-@import 'protocols/quiz1';
+ @import 'protocols/quiz1';
+ @import 'components/points-indicator';
