Hotfix: Add accessibility statement
This adds an accessibility statement, according to the EU Accessibility
directive, and a template from Aalto University.

Since the statement should be specific to the institution, this is split
into the "local part" and the "known issues", which are part of the
system.

This commit was cherry-picked from master into a hotfix branch.

--- a/templates/base.html
+++ b/templates/base.html
@@ -196,6 +196,7 @@
                     <ul class="nav navbar-nav">
                         {% block footercontent %}{% endblock %}
                         <li role="presentation"><a href="{% url 'privacy_notice' %}">{% trans "Privacy Notice" %}</a></li>
+                        <li><a href="{% url 'accessibility_statement' %}">{% trans "Accessibility Statement" %}</a></li>
                     </ul>
                 </div>
             </nav>
