Fix invalid transition property

--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -21,7 +21,7 @@ $large-height: 24px;
 	background-color: $background-color;
 	color: $text-color;
 	border: 1px solid $border-color;
-	transition: all 0.4-s ease;
+	transition: all 0.3s ease;
 
 	&:hover,
 	&:active {
