Add validation error summary to questionnaires
Adds a more accesible alert to be a possible
replacement for the bootstrap "alert alert-danger".

Currently used only for the validation errors for a
mooc-grader questionnaire.

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -33,6 +33,7 @@ $brand-danger: $aplus-danger;
 /*!
  * A+ Styles
  */
-@import 'protocols/quiz1';
 @import 'components/button';
+@import 'components/error_summary';
 @import 'components/frontpage-cards';
+@import 'protocols/quiz1';
