--- a/assets/sass/protocols/_quiz1.scss
+++ b/assets/sass/protocols/_quiz1.scss
@@ -2,6 +2,8 @@
 
 /* Mooc-grader questionnaire */
 
+/* Questionnaire uses also error-summary-class from "components/error_summary" */
+
 .exercise .aplus-quiz1 {
 	.question-area {
 		margin-top: 20px;
