Show alert message when viewing content with different language
When user is viewing course content in different language than set in
their preferences, show an alert message with a button to change the
language back to their preferred one.
For students (aka users who are enrolled on the course), there is also
a button to change the current language as their preferred language for
this course.
For course staff (users who are not enrolled), there is a text
indicating that they can change the preferred language from their
profile.

--- a/assets/sass/legacy/_main.scss
+++ b/assets/sass/legacy/_main.scss
@@ -74,6 +74,22 @@ table.src tr td.src {
     color: #333;
     border: 2px solid #333;
     font-weight: bold;
+
+    /* only used once and should be moved if .alert is re-implemented */
+    .button-container {
+        display: flex;
+        flex-wrap: wrap;
+
+        .aplus-button--secondary {
+            margin-right: 4px;
+        }
+    }
+
+    .language-icon {
+        float: left;
+        height: 2em;
+        margin-right: 10px;
+    }
 }
 
 /* site footer */
